--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,11 @@
         "-p",
         "test*.py"
     ],
-    "python.testing.pytestEnabled": true,
+    "python.testing.pytestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.unittestEnabled": false,
     "python.testing.pytestArgs": [
-        "semester-2"
-    ]
+        "."
+    ],
+    "python.testing.promptToConfigure": false
 }
